custom.css
/* ... */
.articleList a {
    margin-left: 0;
}

/* Article: Category menu */

@media screen and (max-width: 768px) {
    #sidebar {
        margin-top: 40px;
    }
}

#sidebar h3 {
    font-size: 18px;
    text-transform: none;
    color: #1d2b36;
}

#sidebar .nav-list {
    margin: 20px 0;
}

#sidebar .nav-list a {
    font-size: 15px;
    color: #000000;
    padding: 8px 15px 8px 0;
}

#sidebar .nav-list a:hover {
    color: #e37500;
}

#sidebar .nav-list .active a,
#sidebar .nav-list .active a:hover,
#sidebar .nav-list .active a:focus {
    font-weight: 500;
    color: #333333;
}

.icon-arrow:before {
    color: #333333;
}

#searchBar.sm button {
    width: 40px;
    top: 1px;
    right: 0;
    background: url("https://d2x2losda9vsjs.cloudfront.net/docs/assets/2019/icon-search.svg") center center no-repeat;
}

#searchBar.sm button:hover {
    background: url("https://d2x2losda9vsjs.cloudfront.net/docs/assets/2019/icon-search.svg") center center no-repeat;
}

#sidebar form .search-query {
    border: 1px solid #a5b2bd;
    border-radius: 5px;
    height: 42px;
    font-size: 14px;
}

#categoryHead .sort select {
    font-size: 12px;
    height: 28px;
}

#categoryHead .sort {
    position: relative;
    top: 0;
}

@media screen and (min-width: 1000px) {
    #categoryHead .sort {
        position: absolute;
        right: 0;
        top: 8px;
    }
}

/* Article: Main content */

#main-content {
    box-sizing: border-box;
    background: none;
}

@media screen and (max-width: 768px) {
    #main-content {
        margin: 20px 0 0;
    }
}

/* Article: Misc styles */

#fullArticle .callout-yellow,
#fullArticle .callout-blue,
#fullArticle .callout-red,
#fullArticle .callout-green,
#fullArticle .callout,
#fullArticle .private-note {
    border-left-width: 4px;
}

#fullArticle .callout-yellow,
#fullArticle .private-note {
    background: #fff6e3;
    border-color: #ffc555;
    margin: 2em 0 4em;
}

#fullArticle .callout-yellow.dashed {
    border-left-width: 1px;
}

#fullArticle .private-note {
    background: #fff6e3 url("https://d2x2losda9vsjs.cloudfront.net/docs/assets/2019/icon--lock.svg") no-repeat top 18px right 18px;
    background-repeat: no-repeat;
    padding: 20px 24px;
}

#fullArticle .private-note > h4 {
    margin-top: 0;
}

#fullArticle a:hover,
#fullArticle a:focus {
    color: #005ca4;
}

#fullArticle strong {
    color: #333333;
}

#fullArticle strong a {
    color: #e37500;
}

.articleFoot p,
.articleFoot time {
    font-family: Graphik, Helvetica, Arial, sans-serif;
    font-style: normal;
    color: #333333;
}

.articleFoot i {
    color: #c5ced6;
}

#sbContact {
    color: #333333;
    border-bottom: 1px dotted #d5dce1;
}

#fullArticle .admin-edit {
    background-color: #fff;
    border: 1px solid #c2cbd3;
    box-shadow: none;
    color: #1087d8;
    font-size: 13px;
    height: 24px;
    line-height: 26px;
    margin-bottom: 30px;
    margin-top: -20px;
    width: auto;
    transition: all 0.2s ease-in-out;
}

#fullArticle .admin-edit:hover {
    border-color: #57b0fb;
}

.articleRatings {
    margin: 3em 0 4em;
    color: #333333;
    border: 0;
    background: #ffffff;
    box-shadow: none;
    border-radius: 5px;
    border: 2px solid #e5e9ec;
}

.icon-search::before {
    display: none;
}

.icon-article-doc {
    display: none;
}

strong,
b {
    font-weight: 500;
    -webkit-font-smoothing: auto;
}

#serp {
    box-sizing: border-box;
}

#serp h1 strong {
    color: #e37500;
}

#serp .articleList > li {
    padding: 0.5em 0 1.5em;
    margin: 1em 0 0 0;
    border-bottom: 1px solid #e5e9ec;
}

#serp .articleList > li a {
    font-weight: 500;
    /*padding-left: 23px;*/
    margin-bottom: 5px;
}

#serp .articleList > li p {
    margin: 0;
    text-overflow: ellipsis;
    font-size: 15px;
    line-height: 1.5;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#serp-dd {
    border-radius: 5px;
    border: none;
    top: 85px;
}

#serp-dd .result a {
    padding: 12px 15px;
}

#serp-dd .result > li.active {
    background: #f1f3f5;
}

#serp-dd .result > li {
    position: relative;
}

#serp-dd .result > li.active a {
    color: #005ca4 !important;
}

#serp-dd.sb {
    top: 45px;
    width: 375px;
}

#serp .articlesFound,
#serp .nada {
    color: #748494;
}

#serp-dd .result > li.private a {
    color: #748494;
}

#serp-dd .icon-private-w:before {
    display: none;
}

#serp-dd .icon-private-w {
    background-image: url("https://d2x2losda9vsjs.cloudfront.net/docs/assets/2019/icon--lock.svg");
    width: 24px;
    height: 24px;
    background-size: cover;
    display: inline-block;
    position: absolute;
    top: 9px;
}

/* Contact Modal */

#contactModal {
    border: 0;
    width: 600px;
    margin-left: -300px;
    top: 8%;
}

#contactModal h2 {
    color: #1d2b36;
    font-weight: 500;
    font-size: 28px;
    letter-spacing: -0.35px;
    border: 0;
    padding: 40px 0 10px 60px;
}

#contactModal .control-label {
    float: none;
    display: block;
    color: #333333;
    font-size: 14px;
    font-weight: 400;
    margin: 0 0 5px;
    padding: 0;
    text-align: left;
    width: 100%;
}

#contactModal .controls {
    margin: 0;
}

#contactModal input[type="text"],
#contactModal input[type="email"],
#contactModal textarea {
    box-sizing: border-box;
    min-height: 42px;
    width: 100%;
}

#contactModal .modal-body {
    padding: 15px 60px 40px;
}

#contactModal #md-message {
    padding: 14px;
    height: 70px;
    width: 100%;
}

#contactModal .form-actions {
    padding: 0;
}

#contactModal input[type="submit"].btn {
    width: 100%;
    background: #ff8500;
    height: 52px;
    transition: all 0.2s ease-in-out;
}

#contactModal input[type="submit"].btn:hover,
#contactModal input[type="submit"].btn:focus,
#contactModal input[type="submit"].btn:active {
    background: #e37500; /* #232A5C; */
    color: #fff;
}

#contactModal .icon-close:before {
    display: none;
}
/* ... */

